--- a/src/styles/CartItem.css
+++ b/src/styles/CartItem.css
@@ -53,3 +53,20 @@
     background: none;
     cursor: pointer;
 }
+
+@media (max-width: 600px) {
+    .footer_main {
+        flex-direction: column;
+    }
+    .cart-item {
+        padding: 0;
+    }
+    .cart-item_name {
+        font-size: 0.8rem;
+        padding: 0;
+    }
+    .cart-item_price {
+        font-size: 0.8rem;
+        justify-self: center;
+    }
+  }
