--- a/src/styles/CartPage.css
+++ b/src/styles/CartPage.css
@@ -94,4 +94,11 @@
     position: absolute;
     top: 4.5rem;
     left: 10%;
+    top: 3.5rem;       
+}
+
+@media (max-width: 600px) {
+    .cart {
+        padding: 1rem;
+    }
 }
